# pico

./: .ghci  .hlint.yaml  CHANGELOG.md  README.md  edible.cabal  nixpkgs.json  package.yaml  pico.cabal  shell.nix
src/: CustomPrelude.hs  Main.hs  PatArr.hs  Pretty.hs  Step.hs  Types.hs
src/Edible/: Prelude.hs
