name:           pico
version:        0.1.0.0
homepage:       https://github.com/mrkgnao/pico#readme
bug-reports:    https://github.com/mrkgnao/pico/issues
author:         Soham Chowdhury
maintainer:     chow.soham@gmail.com
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/mrkgnao/pico

executable pico
  main-is: Main.hs
  other-modules:
      CustomPrelude
      PatArr
      Pretty
      Step
      Types
      Paths_pico
  hs-source-dirs:
      src
  default-extensions: LambdaCase
  build-depends:
      QuickCheck
    , adjunctions
    , base
    , bound
    , comonad
    , containers
    , deriving-compat
    , ether
    , free
    , hedgehog
    , lens
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , transformers
    , unbound-generics
    , vector
  default-language: Haskell2010
